2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.c (toplevel): Drop obsolete comment and move compose_status...
	(handle_one_xevent): ...to here.
	(STORE_KEYSYM_FOR_DEBUG): Move under ENABLE_CHECKING and make no-op
	otherwise.

2013-09-02  Dmitry Antipov  <dmantipov@yandex.ru>

	* msdos.c (IT_set_terminal_window): Remove no-op.
	(initialize_msdos_display): Adjust terminal setup.
	* w32console.c (w32con_set_terminal_window): Remove no-op.
	(initialize_w32_display): Adjust terminal setup.
	* w32term.c (w32_set_terminal_window): Remove no-op.
	(w32_create_terminal): Adjust terminal setup.
	* xterm.c (XTset_terminal_window): Remove no-op.
	(x_create_terminal): Adjust terminal setup.

2013-09-01  Dmitry Antipov  <dmantipov@yandex.ru>

	* nsterm.m (ns_set_terminal_modes, ns_reset_terminal_modes):
	Remove no-ops.
	(ns_create_terminal): Adjust terminal setup.
	* w32term.c (w32_set_terminal_modes, w32_reset_terminal_modes):
	Remove no-ops.
	(w32_create_terminal): Adjust terminal setup.
	* xterm.c (XTset_terminal_modes, XTreset_terminal_modes):
	Remove no-ops.
	(x_create_terminal): Adjust terminal setup.

2013-09-01  Dmitry Antipov  <dmantipov@yandex.ru>

	* dispextern.h (SET_TEXT_POS_FROM_MARKER): Indent.
	(CLIP_TEXT_POS_FROM_MARKER): New macro.
	* dispnew.c (buffer_posn_from_coords):
	* window.c (Fwindow_end, displayed_window_lines):
	* xdisp.c (redisplay_mode_lines): Use it.

2013-09-01  Jan Djärv  <jan.h.d@swipnet.se>

	* fontset.c (face_for_char): Check char in the current face font first
	if HAVE_NS (Bug#15138).

2013-08-31  Martin Rudalics  <rudalics@gmx.at>

	* window.c (temp_output_buffer_show): Make sure window returned
	by display_buffer is live (Bug#15213).

2013-08-30  Dmitry Antipov  <dmantipov@yandex.ru>

	Minor cleanup to avoid forward declarations.
	* coding.h (struct ccl_spec): Remove forward declaration.
	* composite.h (toplevel): Include font.h.
	(struct composition_it, struct face, struct font_metrics):
	Remove forward declaration.